# DesignPatterns

./: .gitignore  README.md
AbstractFactory/: CMakeLists.txt  main.cpp
AbstractFactory/include/: BydCarFactory.h  BydElectricCar.h  BydOilCar.h  ElectricPoweredCar.h  IAbstractCarFactory.h  ICar.h  OilPoweredCar.h  TeslaCarFactory.h  TeslaElectricCar.h  TeslaOilCar.h
AbstractFactory/source/: BydCarFactory.cpp  BydElectricCar.cpp  BydOilCar.cpp  ElectricPoweredCar.cpp  IAbstractCarFactory.cpp  ICar.cpp  OilPoweredCar.cpp  TeslaCarFactory.cpp  TeslaElectricCar.cpp  TeslaOilCar.cpp
Adapter-class/: CMakeLists.txt
Adapter-class/include/: Adaptee.h  Adapter.h  Target.h
Adapter-class/source/: Adaptee.cpp  Adapter.cpp  Client.cpp
Adapter-object/: CMakeLists.txt  main.cpp
Adapter-object/include/: Adapter.h  Client.h  IChargeInterface.h  Socket.h
Adapter-object/source/: Adapter.cpp  IChargeInterface.cpp  Socket.cpp
Bridge/: CMakeLists.txt  main.cpp
Bridge/include/: Bluetooth.h  HWPhone.h  IBluetooth.h  Phone.h  XMPhone.h
Bridge/src/: Bluetooth.cpp  HWPhone.cpp  IBluetooth.cpp  Phone.cpp  XMPhone.cpp
Builder/: CMakeLists.txt  main.cpp
Builder/include/: BeefBurgerMealBuilder.h  ChickenBurgerMealBuilder.h  Meal.h  MealBuilder.h  MealDirector.h
Builder/src/: BeefBurgerMealBuilder.cpp  ChickenBurgerMealBuilder.cpp  Meal.cpp  MealBuilder.cpp  MealDirector.cpp
Command/: CMakeLists.txt  main.cpp
Command/include/: AddCommand.h  Chef.h  DbCommand.h  DeleteCommand.h  OrderCommand.h  QueryCommand.h  SQLOperator.h  UpdateCommand.h  Waiter.h
Command/src/: AddCommand.cpp  Chef.cpp  DeleteCommand.cpp  ICommand.cpp  OrderCommand.cpp  QueryCommand.cpp  SQLOperator.cpp  UpdateCommand.cpp  Waiter.cpp
Composite/: CMakeLists.txt  main.cpp
Composite/include/: Graphic.h  Picture.h  Rectangle.h  Triangle.h
Composite/src/: Graphic.cpp  Picture.cpp  Rectangle.cpp  Triangle.cpp
Decorator/: CMakeLists.txt  main.cpp
Decorator/include/: ComponentDecorator.h  ConcreteComDecorator.h  ConcreteComponent.h  IComponent.h
Decorator/src/: ComponentDecorator.cpp  ConcreteComDecorator.cpp  ConcreteComponent.cpp  IComponent.cpp
Facade/: CMakeLists.txt  main.cpp
Facade/include/: CPU.h  HardDisk.h  MMemory.h  MainFrame.h  OS.h
Facade/source/: CPU.cpp  HardDisk.cpp  MMemory.cpp  MainFrame.cpp  OS.cpp
FactoryMethod/: CMakeLists.txt  main.cpp
FactoryMethod/include/: CommonDefine.h  HumanFactory.h  IHuman.h  WhiteHuman.h  YellowHuman.h
FactoryMethod/source/: HumanFactory.cpp  IHuman.cpp  WhiteHuman.cpp  YellowHuman.cpp
Flyweight/: CMakeLists.txt  main.cpp
Flyweight/include/: CommonStructs.h  Flyweight.h  FlyweightFactory.h
Flyweight/src/: Flyweight.cpp  FlyweightFactory.cpp
Mediator/: CMakeLists.txt  test.cpp
Mediator/include/: AbstractColleague.h  AbstractMediator.h  CommonType.h  ConcreteColleague1.h  ConcreteColleague2.h  ConcreteMeaditor.h
Mediator/src/: ConcreteColleague1.cpp  ConcreteColleague2.cpp  ConcreteMeaditor.cpp
Observer/: CMakeLists.txt  main.cpp
Observer/include/: AbstractObserver.h  Blogger.h  Common.h  FollowerObserver.h
Observer/src/: Blogger.cpp  FollowerObserver.cpp
ProtoType/: CMakeLists.txt  main.cpp
ProtoType/include/: Enum.h  MessageBox.h  MessageDecorator.h  MsgDecoratorManager.h  UnderLinePen.h
ProtoType/src/: MessageBox.cpp  MessageDecorator.cpp  MsgDecoratorManager.cpp  UnderLinePen.cpp
Proxy/: CMakeLists.txt  main.cpp
Proxy/include/: CarProxy.h  ComputerProxy.h  IMachineProxy.h  ISubject.h  Proxy.h  RealSubject.h  SmartPhotoProxy.h
Proxy/source/: CarProxy.cpp  ComputerProxy.cpp  IMachineProxy.cpp  SmartPhoneProxy.cpp
Proxy/src/: Proxy.cpp  RealSubject.cpp
Singleton/: CMakeLists.txt  main.cpp
Singleton/include/: Emperor.h  SingleDbManager.h  SingleHungryStaticPointer.h  SingleLazyStaticPointer.h  SingleLazyStaticSmartPointer.h  SingleLazyStaticVar.h  SingletonTemplate.h
Singleton/src/: Emperor.cpp  SingleDbManager.cpp  SingleHungryStaticPointer.cpp  SingleLazyStaticPointer.cpp  SingleLazyStaticSmartPointer.cpp  SingleLazyStaticVar.cpp
Strategy/: CMakeLists.txt  main.cpp
Strategy/include/: BackDoor.h  Bus.h  Car.h  Context.h  GivenGreenLight.h  IStrategy.h  ITransportStrategy.h  TransportContext.h
Strategy/src/: BackDoor.cpp  Bus.cpp  Car.cpp  Context.cpp  GivenGreenLight.cpp  IStrategy.cpp  TransportContext.cpp
TemplateMethod/: CMakeLists.txt  main.cpp
TemplateMethod/include/: CComputer.h  DesktopComputer.h  LaptopComputer.h
TemplateMethod/source/: CComputer.cpp  DesktopComputer.cpp  LaptopComputer.cpp
